Day_3/2_node_port_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-nodeport
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30036  # Optional, can omit

---
kubectl apply -f .

---

kubectl get svc myapp-nodeport

curl localhost:30036

---
